@@ -1,4 +1,3 @@
 java -cp build \
    --enable-native-access=ALL-UNNAMED \
-   --enable-preview --source=21 \
    JImageFile.java
