@@ -2,10 +2,9 @@
 # brew install lp_solve
  
 jextract \
-  --source \
+  --output src \
   -t net.sourceforge.lpsolve \
-  -I /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include \
   -l lpsolve55 \
   /usr/local/Cellar/lp_solve/5.5.2.11/include/lp_lib.h
 
-javac --enable-preview --source=21 net/sourceforge/lpsolve/*.java
+javac --source=22 -d . src/net/sourceforge/lpsolve/*.java
