@@ -4,7 +4,7 @@ param(
 )
 
 java `
+  -cp classes `
   --enable-native-access=ALL-UNNAMED `
-  --enable-preview --source=21 `
   -D"java.library.path=C:\Windows\System32`;$freeglutPath\bin\x64" `
   Teapot.java
