@@ -1,6 +1,5 @@
-jextract --source \
-  -I /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include \
+jextract --output src \
   /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/sqlite3.h \
   -t org.sqlite -lsqlite3
 
-javac --enable-preview --source=21 org/sqlite/*.java
+javac --source=22 -d . src/org/sqlite/*.java
