@@ -1,3 +1,2 @@
 java --enable-native-access=ALL-UNNAMED \
-   --enable-preview --source=21 \
    TensorflowLoadSavedModel.java saved_mnist_model
