@@ -1,5 +1,4 @@
-jextract --source -t org.unix \
-  -I /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include \
+jextract --output src -t org.unix \
    /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/time.h
 
-javac --enable-preview --source=21 org/unix/*.java
+javac --source=22 -d . src/org/unix/*.java
